fix: z-index fade roles

--- a/src/pages/main/Roles/index.module.css
+++ b/src/pages/main/Roles/index.module.css
@@ -26,7 +26,7 @@
   position: fixed;
   top: 0;
   left: 0;
-  z-index: 20;
+  z-index: 200;
   padding-top: 30px;
 }
 
